# scheme._.

./: Dockerfile  README.md  scheme-in48.cabal  test.scm
app/: Internal.hs  Main.hs  Parser.hs  Primitive.hs
app/Evaluator/: BinaryOperation.hs  Environment.hs  Eval.hs  InputOutputOperation.hs  ListOperation.hs  Reader.hs  Repl.hs  Unpacker.hs
app/Evaluator/BinaryOperation/: Numberic.hs  Ord.hs
app/Parser/: ParseExpression.hs
app/Primitive/: Primitive.hs  PrimitiveError.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
lib/: standard.scm
