cabal-version:      2.4
name:               scheme-in48
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sangit Manandhar
maintainer:         rux12@icloud.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable scheme-in48
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Primitive.Primitive,
        Primitive.PrimitiveError,
        Parser.ParseExpression,
        Evaluator.Eval,
        Evaluator.BinaryOperation.Numberic
        Evaluator.BinaryOperation.Ord
        Evaluator.ListOperation
        Evaluator.Unpacker
        Evaluator.Repl
        Evaluator.Environment

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions
    build-depends:    base ^>=4.17.2.0, parsec >= 3.1.11, mtl >= 2.2.2
    hs-source-dirs:   app
    default-language: Haskell2010
